added table with style

--- a/favorite-thing/index.html
+++ b/favorite-thing/index.html
@@ -19,7 +19,7 @@
         <li>It's challenging and fun</li>
         <li>I get to spend a lot of time with friends</li>
     </ol>
-    <p>To find more information about the EPS golf team and other EPS athletic teams <a href="https://www.eastsideprep.org/athletics/upper-school/">click here.</a></p>
+    <p>To find more information about the EPS golf team and other EPS athletic teams <a href="https://www.eastsideprep.org/athletics/upper-school/" target="blank">click here.</a></p>
     <p>Our <mark>talented</mark> team:</p>
     <img src="images/teamphoto.png" alt="EPS Boys Golf Team" style="width:50%">
 </body>
