added table with style

--- a/favorite-thing/index.html
+++ b/favorite-thing/index.html
@@ -6,6 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favorite Thing!</title>
+    <style>
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 10px;
+
+        }
+        th {
+            background-color: grey;
+            color: white;
+        }
+    </style>
 </head>
 
 <body bgcolor="#B8FAC5">
@@ -22,5 +36,24 @@
     <p>To find more information about the EPS golf team and other EPS athletic teams <a href="https://www.eastsideprep.org/athletics/upper-school/" target="blank">click here.</a></p>
     <p>Our <mark>talented</mark> team:</p>
     <img src="images/teamphoto.png" alt="EPS Boys Golf Team" style="width:50%">
+    
+    <!--New tags: table youtube google maps-->
+    <table>
+            <tr>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+            </tr>
+            <tr>
+                <td>Tuscan Chicken Pasta</td>
+                <td>Cajun Shrimp</td>
+                <td>Asian Chicken Fried Rice</td>
+            </tr>
+            <tr>
+                <td>9/10</td>
+                <td>10/10</td>
+                <td>7.5/10</td>
+            </tr>
+    </table>
 </body>
 </html>
