--- a/favorite-thing/index.html
+++ b/favorite-thing/index.html
@@ -55,5 +55,8 @@
                 <td>7.5/10</td>
             </tr>
     </table>
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/twHMwAV8qfU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685.9296604174365!2d-122.18864138472412!3d47.68578597918995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901294180e63e7%3A0x7dfd50673043a39d!2s9427%20116th%20Ave%20NE%2C%20Kirkland%2C%20WA%2098033!5e0!3m2!1sen!2sus!4v1679435140469!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
