Completed CSS Grid Challenge with Second Page

--- a/css-grid/index.html
+++ b/css-grid/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="grid-container">
+        <div class="grid-item navmenu">
+            <ul class="nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </div>
+        <div class="grid-item main-image"><img src="images/miami.png" alt="Miami Downtown" style="width:100%"></div>
+        <div class="grid-item sidenav">Side Nav</div>
+        <div class="grid-item main1">Main 1</div>
+        <div class="grid-item main2">Main 2</div>
+        <div class="grid-item support1">Support Section 1</div>
+        <div class="grid-item support2">Support Section 2</div>
+    </div>
+    <div class="footer">
+        <p>This website was created by Yash™ </p>
+    </div>
 </body>
 </html>
