--- a/js-messaround/index.html
+++ b/js-messaround/index.html
@@ -33,7 +33,7 @@
     <button onclick="document.getElementById('alice').style.color='blue'; document.getElementById('alice').style.fontSize='5px'">Cake - Eat me</button>
     <button onclick="document.getElementById('alice').style.color='red'; document.getElementById('alice').style.fontSize='50px'">Potion - Drink me</button>
     <!--add third button to restore Alice to default font color and size-->
-    <button onlick="document.getElementById('alice').style.color='black'; document.getElementById('alice').style.fontSize='12px'">Restore me</button>
+    <button onclick="document.getElementById('alice').style.color='black'; document.getElementById('alice').style.fontSize='16px'">Restore me</button>
     
     <hr>
     <h2>How do we return user input with a function?</h2>
