--- a/forms-demo/index.html
+++ b/forms-demo/index.html
@@ -7,7 +7,7 @@
     <title>Quiz and Two Truths and Lie</title>
 </head>
 <body>
-    <h1>Welcome to my quick and two truths and a lie game!</h1>
+    <h1>Welcome to my quiz and two truths and a lie game!</h1>
     <h2>Who are you?</h2>
     <form action="" id="name-form">
         <label for="fname">First Name:</label><br>
