--- a/final-project/index.html
+++ b/final-project/index.html
@@ -193,6 +193,23 @@
             </div>
         </form>
     </div>
+    <br><br><br><br>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; 2023 VEF Blind School. All rights reserved.</p>
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-inline text-md-end">
+                        <li class="list-inline-item"><a href="https://www.youtube.com/@vivekeducationfoundation3039/featured" target="_blank">YouTube</a></li>
+                        <li class="list-inline-item"><a href="mailto:info@bemysight.org">Email</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
 
 
 
