--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+    
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
+    }
+
+    .form-container {
+      float: left;
+      width: 50%;
+    }
+
+    .contact-info {
+      width: 100%;
+      margin-top: 2rem;
+      font-size: 14px;
+    }
+
+    .form-group label {
+      font-weight: bold;
+    }
+
+    .form-group input,
+    .form-group textarea {
+      width: 100%;
+      padding: 0.5rem;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      resize: vertical;
+    }
+
+    .form-group button {
+      padding: 0.5rem 1rem;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .form-group button:hover {
+      background-color: #0069d9;
+    }
+</style>
 <body>
      <!--bootstrap container for content and layout control-->
      <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
@@ -15,12 +60,77 @@
         </a>
         <div class="container-fluid">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link" href="donate.html">You Can Help</a></li>
             </ul>
         </div>
     </nav>
+    <div class="container">
+        <h1 class="display-4">Contact Us</h1>
+        <form action="mailto:info@bemysight.org" method="POST">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+            <label for="date">Date</label>
+            <input type="number" id="date" name="date" min="1" max="31" required>
+          </div>
+          <div class="form-group">
+            <label for="month">Month</label>
+            <input type="number" id="month" name="month" min="1" max="12" required>
+          </div>
+          <div class="form-group">
+            <label for="year">Year</label>
+            <input type="number" id="year" name="year" min="1900" max="2099" required>
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+          </div>
+          <div class="form-group">
+            <button type="submit">Submit</button>
+          </div>
+        </form>
+        <div class="contact-info">
+            <h2 class="display-4">Contact Information</h2>
+            <p class="display-6">We are located at:</p>
+            <p>10 B10 Krishna Kutir Bungalow</p>
+            <p>Sion Trombay Road</p>
+            <p>Mankhurd, Mumbai 400088</p>
+            <p><a href="https://goo.gl/maps/WP8wExq7o1FJdXaNA">Google Map Location</a></p>
+            <p class="display-6">Call us at:</p>
+            <p>Mrs. Prabha Shinde</p>
+            <p>+9833955517 and +9820842677</p>
+            <p class="display-6">For more information, write to us at:</p>
+            <p>E-mail: <a href="mailto:info@bemysight.org">info@bemysight.org</a></p>
+        </div>
+    </div>
+
+    <a class="donate-button" href=mailto:info@bemysight.org>Donate</a>
+    <br><br><br><br>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; 2023 VEF Blind School. All rights reserved.</p>
+                </div>
+                <div class="col-md-6">
+                    <ul class="list-inline text-md-end">
+                        <li class="list-inline-item"><a href="https://www.youtube.com/@vivekeducationfoundation3039/featured" target="_blank"><img class="footer-icon" src="images/youtube.png" alt="Youtube logo" style="width: 10%;"></a></li>
+                        <li class="list-inline-item"><a href="mailto:info@bemysight.org"><img class="footer-icon" src="images/mail.png" alt="Mail logo" style="width: 10%"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
  <!-- Latest compiled JavaScript -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
